<resources>
	<string name="app_name" translatable="false">UWheels</string>

	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>

	<!-- Strings related to login -->
	<!-- Login fragment -->
	<string name="login">Login</string>
	<string name="login_with_google">Login with Google</string>
	<string name="login_with_account">or login with your account</string>
	<string name="email">Email</string>
	<string name="password">Password</string>
	<string name="forgot_your_password"><u>Forgot your password?</u></string>
	<string name="or">or</string>
	<string name="sign_up">Sign Up</string>
	<string name="login_with_facebook">Login with Facebook</string>
	<string name="press_to_login">Press to login</string>
	<string name="press_to_sign_up">Press to sign up</string>

	<string name="welcome">"Welcome!"</string>
	<string name="invalid_email">Not a valid email</string>
	<string name="invalid_password">Password: >=8 characters, 1 digit, 1 upper, 1 lower case letter</string>
	<string name="login_failed">Invalid email and/or password</string>

	<string name="name">Name</string>
	<string name="last_name">Last Name</string>
	<string name="phone_number">Phone Number</string>
	<string name="cancel">Cancel</string>
	<string name="password_again">Password again</string>
	<string name="title_uwheels_community">UWheels Community</string>
	<string name="become_driver_prompt">Our community is made up of drivers and passengers. At the moment, you make part of the passengers, but you can apply to become a driver!\n\nTo apply, you will need:\n- A valid driver license\n- Proof of ownership of your vehicle\n- Pictures of your vehicle\n- Valid driver\'s insurance</string>
	<string name="want_become_driver">I want to be a driver</string>
	<string name="continue_as_passenger">Continue as passenger</string>
	<string name="press_to_remove">Press here to remove</string>
	<string name="file_name">File name</string>
	<string name="back">Back</string>
	<string name="next">Next</string>
	<string name="upload">Upload</string>
	<string name="camera">Camera</string>
	<string name="profile_is_verified">This profile is verified</string>
	<string name="press_open_profile">Press to open the profile</string>
	<string name="greeting_name">Hello, %s</string>
	<string name="driver_mode">Driver mode</string>
	<string name="my_rides">My rides</string>
	<string name="my_contacts">My contacts</string>
	<string name="chats">Chats</string>
	<string name="settings">Settings</string>
	<string name="look_for_ride">Look for a ride</string>
	<string name="create_ride">Create a ride</string>
	<string name="active">Active</string>
	<string name="requested">Requested</string>
	<string name="completed">Completed</string>
	<string name="contacts">Contacts</string>
	<string name="requests">Requests</string>
	<string name="go_back">Go back</string>
	<string name="send">Send</string>
	<string name="hint_input">Type a message…</string>
	<string name="classic_wheels">Classic Wheels</string>
	<string name="shared_wheels">Shared Wheels</string>
	<string name="we_wheels">We Wheels</string>
	<string name="press_search_filters">Press to set search filters</string>
	<string name="search">Search</string>
	<string name="request">Request</string>
	<string name="source">Source</string>
	<string name="destination">Destination</string>
	<string name="date">Date</string>
	<string name="time">Time</string>
	<string name="select_time">Select time</string>
	<string name="select_date">Select date</string>
	<string name="ride_information">Ride information</string>
	<string name="ride_config">Ride config</string>
	<string name="wheels_type">Wheels type</string>
	<string name="select_wheels_type">Select wheels type</string>
	<string name="capacity">Capacity</string>
	<string name="select_capacity">Select capacity</string>
	<string name="create">Create</string>
	<string name="transportation">Transportation</string>
	<string name="select_transportation">Select transportation</string>
	<string name="cash">Cash</string>
	<string name="signup_failed_empty_fields">All fields must be filled</string>
	<string name="password_mismatch">Passwords must match</string>
	<string name="signup_failed">Sign up failed</string>

	<string name="supported_files"><b>Supported files:</b> %s</string>
	<string name="plate">Plate</string>
	<string name="make">Make</string>
	<string name="year">Year</string>
	<string name="model">Model</string>

	<string name="chat_date">%s %s</string>
	<string name="ride_date">%s %s</string>

	<!-- Locations permissions -->
	<string name="permission_location_denied">Location access permissions were denied</string>
	<string name="permission_fine_location_title">Fine location access</string>
	<string name="permission_fine_location_message">
		The app needs fine location access to accurately draw routes
		from your current location to your desired destination
	</string>
	<string name="permissions_location_title">Location access</string>
	<string name="permissions_location_message">
		The app needs location access to draw routes from
		your current location to your desired destination
	</string>

	<!-- Permissions -->
	<string name="request_permission">Request permission</string>
	<string name="dismiss">Dismiss</string>
	<string name="activate_driver_mode">Activate Driver Mode?</string>
	<string name="ok">OK</string>
	<string name="welcome_driver">Welcome to the Drivers Family!</string>
	<string name="license_files_name">license%d.%s</string>
	<string name="ownership_files_name">ownership%d.%s</string>
	<string name="insurance_files_name">insurance%d.%s</string>
	<string name="vehicle_pics_name">picture%d.%s</string>
	<string name="vehicle_detail_name">detail%d.%s</string>
	<string name="deactivate_driver_mode">Deactivate Driver Mode?</string>
	<string name="profile_picture">Profile picture</string>
	<string name="logout">Logout</string>
	<string name="edit_profile">Edit Profile</string>
	<string name="is_driver">Is Driver?</string>
	<string name="save">Save</string>
	<string name="empty_fields">All fields must be filled</string>
	<string name="uploaded_profile_picture_name">profilePicture.%s</string>
	<string name="color">Color</string>
	<string name="source_address_empty">Source address can\'t be empty</string>
	<string name="destination_address_empty">Destination address can\'t be empty</string>
	<string name="date_empty">Date can\'t be empty</string>
	<string name="date_in_past">Date must be after current date</string>
	<string name="creating_ride">Creating ride…</string>
	<string name="ride_created">Ride created successfully</string>

	<string name="ride_capacity">%d passengers</string>
	<string name="ride_info">By %s at %s %s</string>
	<string name="rides">Rides</string>
	<string name="hosted_rides">Hosted Rides</string>
	<string name="hosted_ride_capacity">%d / %d passengers</string>
	<string name="hosted_ride_info">Created at %s %s</string>
	<string name="hosted_ride_requests">%d requests</string>
	<string name="ride_requests">Ride Requests</string>
	<string name="accept">Accept</string>
	<string name="reject">Reject</string>
	<string name="full_name">%s %s</string>
	<string name="ride_request_info">Requested at %s %s</string>
	<string name="ride_request_address">(%.1f km) %s</string>
	<string name="payment_method">Payment method</string>
	<string name="ride_capacity_short">%d/%d</string>
	<string name="address_with_distance">(%.1f km) %s</string>
	<string name="requesting_ride">Requesting ride…</string>
	<string name="request_sent">Ride request sent</string>
	<string name="ride_requested">Ride requested</string>
	<string name="ride_requested_message">You may see the status of the request in your rides</string>
	<string name="hosted_ride">Hosted Ride</string>
	<string name="start_ride">Start Ride</string>
	<string name="cancel_ride">Cancel Ride</string>
	<string name="view_requests">View Requests</string>
	<string name="passengers">Passengers</string>
	<string name="rating">%.1f</string>
	<string name="date_format">%s %s</string>
	<string name="channel_name">UWheels</string>
	<string name="channel_description">UWheels notification channel</string>
	<string name="vehicle">Vehicle</string>
</resources>
